--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background: #DFDAC7;
+}
